# certification-lab-ci-tools

./: .gitignore  README.md  add_private_ppa.py  install_tools.sh  mailtool  package_data.py  stagger_runs.py  test_mailtool.py
.github/workflows/: test_scriptlets.yaml  test_toolbox.yaml  test_verify_kernel_version.yaml
cert-tools/toolbox/: README.md  pyproject.toml  tox.ini
cert-tools/toolbox/src/toolbox/: __init__.py  results.py  retries.py  snap_connections.py
cert-tools/toolbox/src/toolbox/checkbox/: installer.py  snaps.py
cert-tools/toolbox/src/toolbox/checkbox/helpers/: connector.py  github.py  runtime.py
cert-tools/toolbox/src/toolbox/checkbox/installers/: __init__.py  debs.py  snaps.py
cert-tools/toolbox/src/toolbox/cli/: ensure_kernel.py  install_checkbox_debs.py  install_checkbox_snaps.py  run.py  wait_for_packages_complete.py  wait_for_snap_changes.py  wait_for_ssh.py
cert-tools/toolbox/src/toolbox/devices/: __init__.py  lab.py  registry.py
cert-tools/toolbox/src/toolbox/entities/: channels.py  connections.py  risk.py  snaps.py
cert-tools/toolbox/src/toolbox/interfaces/: __init__.py  arch.py  debs.py  reboot.py  snapd.py  snaps.py  status.py
cert-tools/toolbox/tests/: test_retries.py  test_snap_connections.py
cert-tools/toolbox/tests/checkbox/: conftest.py
cert-tools/toolbox/tests/checkbox/helpers/: test_connector.py  test_github.py  test_runtime.py
cert-tools/toolbox/tests/checkbox/installers/: test_debs.py  test_init.py  test_snaps.py
cert-tools/toolbox/tests/cli/: test_ensure_kernel.py
cert-tools/toolbox/tests/devices/: test_device_interfaces.py  test_devices.py  test_lab.py  test_localhost.py  test_registry.py  test_remotehost.py  trivial.py
cert-tools/toolbox/tests/entities/: test_channels.py  test_connections.py  test_snaps.py
cert-tools/toolbox/tests/interfaces/: test_debs.py  test_reboot.py  test_snapd.py  test_snaps.py  test_status.py
scriptlets/: .gitignore  README.md  baoshan_setup  clean_machine  connect_snaps  install_checkbox_agent_source  install_checkbox_debs  install_checkbox_snaps  pyproject.toml  refresh_zapper_if_needed  setup_apt_cache_proxy  tox.ini  wait_for_packages_complete  wait_for_snap_changes  wait_for_ssh
scriptlets/src/: verify_kernel_version.py
scriptlets/sru-helpers/: fetch_manifest
scriptlets/test-executions-rerunner/: test_executions_rerunner.py  test_test_executions_rerunner.py
scriptlets/tests/: test_verify_kernel_version.py
