[project]
name = "scriptlets"
version = "0.0.0"
description = "Standalone scriptlets run on devices under test."
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
]

[tool.uv]
# These scriptlets are standalone scripts, not an installable package.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 79

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 100
skip_covered = false
skip_empty = false
exclude_also = [
    "if __name__ == .__main__.:",
]
