[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "toolbox"
version = "2.0.0"
description = "Python scriptlets"
authors = [
    {name = "George Boukeas", email = "george.boukeas@canonical.com"},
]
requires-python = ">=3.8"
dependencies = [
    "packaging",
    "pyyaml",
    "pygithub",
    "fabric>=3.2.2",
    "snapstore @ ../snapstore"
]
[project.scripts]
run = "toolbox.cli.run:main"
wait-for-ssh = "toolbox.cli.wait_for_ssh:main"
wait-for-packages-complete = "toolbox.cli.wait_for_packages_complete:main"
wait-for-snap-changes = "toolbox.cli.wait_for_snap_changes:main"
install-checkbox-snaps = "toolbox.cli.install_checkbox_snaps:main"

[project.optional-dependencies]
dev = ["pytest"]