[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "toolbox"
version = "1.0.0"
description = "Python scriptlets"
authors = [
    {name = "George Boukeas", email = "george.boukeas@canonical.com"},
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pygithub",
    "fabric>=3.2.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-cov"]

[tool.coverage.report]
skip_covered = false
skip_empty = false